# rust-assert-not-modified

./: Cargo.toml  README.md
src/: lib.rs
