[package]
name = "assert-not-modified"
version = "0.1.2"
edition = "2018"

description = "Intended for tests : Wrapper function which checks that the given closure does not modify input data."

authors = ["Paul Constant <constantpaul@hotmail.fr>"]
repository = "https://github.com/paulMConstant/rust-assert-not-modified"

license = "GPL-3.0"

keywords = ["assert", "test"]
categories = ["development-tools::testing"]

[dependencies]
