[package]
name = "assert-not-modified"
version = "1.0.0"
edition = "2018"

description = "Macro which, given a variable and a block of code, executes the block of code and checks that the variable has not changed."
readme = "README.md"

authors = ["Paul Constant <constantpaul@hotmail.fr>"]
repository = "https://github.com/paulMConstant/rust-assert-not-modified"

license = "GPL-3.0"

keywords = ["assert", "test", "mutate", "modify", "macro"]
categories = ["development-tools::testing"]

[dependencies]
